# borrowme

./: README.md
.github/workflows/: ci.yml  weekly.yml
crates/borrowme/: Cargo.toml  README.md
crates/borrowme-macros/: Cargo.toml  README.md
crates/borrowme-macros/src/: attr.rs  ctxt.rs  implement.rs  lib.rs  respan.rs
crates/borrowme/src/: borrow.rs  borrow_mut.rs  lib.rs  to_owned.rs
crates/borrowme/src/borrow/: std.rs
crates/borrowme/src/borrow_mut/: std.rs
crates/borrowme/src/to_owned/: std.rs
crates/borrowme/tests/: borrow_mut.rs  borrowed_filtering.rs  borrowme_no_copy.rs  build_enum.rs  build_struct.rs  copy_fields.rs  derive_fields.rs  generic_type_params.rs  multiple_lifetimes.rs  no_copy.rs  prefix.rs  std_containers.rs  std_types.rs  vec_field.rs
crates/borrowme/tests/ui/: conflicting_attributes.rs  conflicting_attributes.stderr  deny_arguments.rs  deny_arguments.stderr  lifetime_hint.rs  lifetime_hint.stderr  missing_path_hint.rs  missing_path_hint.stderr  no_lifetime.rs  no_lifetime.stderr  trait_diagnostics.rs  trait_diagnostics.stderr
