[package]
name = "borrowme-macros"
version = "0.0.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = "The missing compositional borrowing for Rust."
documentation = "https://docs.rs/borrowme"
readme = "README.md"
homepage = "https://github.com/udoprog/borrowme"
repository = "https://github.com/udoprog/borrowme"
license = "MIT/Apache-2.0"
keywords = ["borrow", "lifetime", "macros"]
categories = ["development-tools", "no-std", "rust-patterns"]

[dependencies]
syn = { version = "2.0.15", features = ["full", "parsing"] }
proc-macro2 = "1.0.56"
quote = "1.0.26"

[lib]
proc-macro = true
