[package]
name = "borrowme"
version = "0.0.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = "The missing compositional borrowing for Rust."
documentation = "https://docs.rs/borrowme"
readme = "README.md"
homepage = "https://github.com/udoprog/borrowme"
repository = "https://github.com/udoprog/borrowme"
license = "MIT/Apache-2.0"
keywords = ["macros", "borrow", "lifetime"]
categories = ["no-std", "development-tools", "rust-patterns"]

[dependencies]
borrowme-macros = { path = "../borrowme-macros", version = "=0.0.1" }

[dev-dependencies]
serde = { version = "1.0.160", features = ["derive"] }
trybuild = "1.0.80"
